<resources>
    <string name="app_name">Travel Itinerary</string>
    <string name="title_register">Register</string>
    <string name="title_login">Login</string>
    <string name="title_email">Email</string>
    <string name="title_password">Password</string>
    <string name="title_phone_number">Phone number</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!-- Bottom Navigation Titles-->
    <string name="bottom_nav_trip_planning">Trip Planning</string>
    <string name="bottom_nav_booking">Flight Booking</string>
    <string name="bottom_nav_hotel_booking">Hotel Booking</string>
    <string name="bottom_nav_budget">Budget Management</string>
    <string name="bottom_nav_travel_tips">Travel Tips</string>
    <string name="login_subtitle">TRAVEL THE WORLD</string>
    <string name="login_title">Itinerary App</string>
    <string name="login_bottom_button_title">Begin your Journey</string>
    <string name="register_description">Create your account, Let\'s plan your travel together!</string>
    <string name="verification_email">We have sent an email with a confirmation link to your email address. Please allow 5–10 minutes for this message to arrive.</string>

    <string name="notes_title">Notes title</string>
    <string name="notes_sub_title">Notes events name</string>
    <string name="notes_desc">Enter your notes here…</string>
    <string name="web_url">Enter Web Url</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>

    <string name="storage_permission_text">This app needs access to your storage.</string>
    <string name="empty_notes_title">Don\'t you have any travel plans yet?\nStart planning now!</string>
    <string name="empty_notes_itinerary_title">Don\'t you have any itinerary plans\nor destination yet?\nStart planning now!</string>
    <string name="empty_notes_budget_title">Still don\'t know how to budget your money?\nList all your expenses now!</string>

    <string name="image_animation_tag">imageTransition</string>
    <string name="text_edit">Edit</string>
    <string name="text_notes">Notes</string>

    <string name="pick_note_color">Pick Note Color</string>
    <string name="add_web_link">Insert Web Link</string>
    <string name="add_image">Add Photo</string>
    <string name="add_hand_writing">Insert Hand Writing</string>

    <string name="dialog_permission_required_title">Notification access is required, Please enable it on the settings to receive notifications.</string>
    <string name="dialog_exit_app_title">Are you sure you want to exit?</string>
    <string name="dialog_logout_title">Are you sure you want to logout?</string>
    <string name="dialog_delete_title">Are you sure you want to delete this note?</string>
    <string name="dialog_subtitle">Please confirm to proceed</string>
    <string name="action_okay">Okay</string>
    <string name="action_yes">Yes</string>
    <string name="action_cancel">Cancel</string>
    <string name="action_delete">Delete</string>
    <string name="action_logout">Logout</string>

    <!-- Hand writing text -->
    <string name="action_settings">Settings</string>
    <string name="start_new">New</string>
    <string name="brush">Brush</string>
    <string name="erase">Erase</string>
    <string name="save">Save</string>
    <string name="paint">Paint</string>
    <string name="text_draw">Draw</string>
    <string name="text_add">Add</string>

    <string name="text_type_of_expenses">Type of expenses</string>
    <string name="text_expenses_amount">Expenses Amount</string>
    <string name="text_list_expenses">List of Expenses:</string>
    <string name="text_expenses">Expenses</string>

    <string name="total_amount">Total Amount</string>
    <string name="title_first_name">First name</string>
    <string name="title_last_name">Last name</string>
    <string name="title_suffix">Suffix</string>
    <string name="title_address">Address</string>
    <string name="title_coming_soon_stay_tuned">COMING SOON\nStay tuned.</string>

    <string name="title_cities">City</string>
    <string name="title_regions">Region</string>
    <string name="find_your_notes">Let\'s find your notes…</string>
    <string name="delete_note">Delete Note</string>
    <string name="action_delete_note">Delete note</string>
    <string name="pin_this_note">(Pin this note)</string>
    <string name="pinned_note_status">(This note is currently pinned)</string>
    <string name="unpin_note_status">(This note has not been pin yet)</string>

    <!-- Span count for linear manager -->
    <string name="column_count_1">Column Count: 1</string>
    <string name="column_count_2">Column Count: 2</string>
    <string name="column_count_3">Column Count: 3</string>
    <string name="column_count_4">Column Count: 4</string>
    <string name="column_count_5">Column Count: 5</string>

    <string-array name="gender_list">
        <item>Male</item>
        <item>Female</item>
        <item>Non-binary</item>
        <item>LGBTQA+</item>
    </string-array>
</resources>