<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/bottom_nav_trip_planning"
        android:icon="@drawable/icon_directions_run_24px"
        android:title="@string/bottom_nav_trip_planning" />

    <item
        android:id="@+id/bottom_nav_booking"
        android:icon="@drawable/icon_airplane_ticket_24px"
        android:title="@string/bottom_nav_booking" />

    <item
        android:id="@+id/bottom_nav_hotel_booking"
        android:icon="@drawable/icon_hotel_24px"
        android:title="@string/bottom_nav_hotel_booking" />

    <item
        android:id="@+id/bottom_nav_budget"
        android:icon="@drawable/icon_monetization_24px"
        android:title="@string/bottom_nav_budget" />

    <item
        android:id="@+id/bottom_nav_travel_tips"
        android:icon="@drawable/icon_directions_car_24px"
        android:title="@string/bottom_nav_travel_tips" />
</menu>