<?xml version="1.0" encoding="utf-8"?>

<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardBackgroundColor="@color/colorLightBeige"
    android:layout_margin="8dp"
    app:cardCornerRadius="6dp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Column Count Selection"
        android:layout_marginTop="20dp"
        android:layout_gravity="center|top"
        android:textColor="@color/colorLightBrown"
        android:fontFamily="@font/poppins_medium"
        android:textSize="16dp"/>

    <LinearLayout
        android:layout_marginTop="50dp"
        android:id="@+id/layout_column"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins_regular"
            android:textAlignment="center"
            android:text="@string/column_count_1"
            android:background="?attr/selectableItemBackground"
            android:textSize="14dp"
            android:focusable="true" />

        <TextView
            android:layout_marginTop="6dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins_regular"
            android:textAlignment="center"
            android:text="@string/column_count_2"
            android:background="?attr/selectableItemBackground"
            android:textSize="14dp"
            android:focusable="true" />

        <TextView
            android:layout_marginTop="6dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins_regular"
            android:textAlignment="center"
            android:background="?attr/selectableItemBackground"
            android:text="@string/column_count_3"
            android:textSize="14dp"
            android:focusable="true" />

        <TextView
            android:layout_marginTop="6dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins_regular"
            android:textAlignment="center"
            android:text="@string/column_count_4"
            android:background="?attr/selectableItemBackground"
            android:textSize="14dp"
            android:focusable="true" />

        <TextView
            android:layout_marginTop="6dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins_regular"
            android:textAlignment="center"
            android:text="@string/column_count_5"
            android:background="?attr/selectableItemBackground"
            android:textSize="14dp"
            android:focusable="true" />
    </LinearLayout>
</androidx.cardview.widget.CardView>




