<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".register.presentation.Register">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:adjustViewBounds="true"
        android:scaleType="centerCrop"
        android:src="@drawable/background_nature"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.core.widget.NestedScrollView
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" >

        <LinearLayout
            android:paddingBottom="40dp"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tvRegister"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="80dp"
                android:fontFamily="@font/indigo_daisy"
                android:layout_gravity="start"
                android:layout_marginStart="22dp"
                android:letterSpacing="0.05"
                android:text="@string/title_register"
                android:textColor="@color/white"
                android:textSize="70dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins_regular"
                android:layout_gravity="start"
                android:layout_marginTop="5dp"
                android:layout_marginHorizontal="22dp"
                android:letterSpacing="0.02"
                android:text="@string/register_description"
                android:textColor="@color/white"
                android:textSize="18dp" />

            <EditText
                android:id="@+id/input_first_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="22dp"
                android:layout_marginTop="63dp"
                android:background="@drawable/et_custom"
                android:fontFamily="@font/poppins_regular"
                android:hint="@string/title_first_name"
                android:alpha="0.9"
                android:drawableTint="@color/gray"
                android:drawablePadding="10dp"
                android:drawableStart="@drawable/icon_person_24px"
                android:inputType="textEmailAddress"
                android:padding="15dp"
                android:textSize="15dp" />

            <EditText
                android:id="@+id/input_last_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="22dp"
                android:layout_marginTop="20dp"
                android:background="@drawable/et_custom"
                android:fontFamily="@font/poppins_regular"
                android:hint="@string/title_last_name"
                android:alpha="0.9"
                android:drawableTint="@color/gray"
                android:drawablePadding="10dp"
                android:drawableStart="@drawable/icon_person_24px"
                android:inputType="textEmailAddress"
                android:padding="15dp"
                android:textSize="15dp" />

            <EditText
                android:id="@+id/input_suffix"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="22dp"
                android:layout_marginTop="20dp"
                android:background="@drawable/et_custom"
                android:fontFamily="@font/poppins_regular"
                android:hint="@string/title_suffix"
                android:alpha="0.9"
                android:drawableTint="@color/gray"
                android:drawablePadding="10dp"
                android:drawableStart="@drawable/icon_person_24px"
                android:inputType="textEmailAddress"
                android:padding="15dp"
                android:textSize="15dp" />

            <include
                android:id="@+id/input_gender"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="22dp"
                android:layout_marginTop="20dp"
                layout="@layout/shared_custom_spinner"/>

            <EditText
                android:id="@+id/input_address"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="22dp"
                android:layout_marginTop="20dp"
                android:background="@drawable/et_custom"
                android:fontFamily="@font/poppins_regular"
                android:hint="@string/title_address"
                android:alpha="0.9"
                android:drawableTint="@color/gray"
                android:drawablePadding="10dp"
                android:drawableStart="@drawable/icon_home_24px"
                android:inputType="textEmailAddress"
                android:padding="15dp"
                android:textSize="15dp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="22dp"
                android:layout_marginTop="20dp"
                android:orientation="horizontal">

                <include
                    android:id="@+id/input_city"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:layout_marginEnd="6dp"
                    layout="@layout/shared_custom_spinner"/>

                <include
                    android:id="@+id/input_region"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:layout_marginStart="6dp"
                    layout="@layout/shared_custom_spinner"/>
            </LinearLayout>


            <EditText
                android:id="@+id/input_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="22dp"
                android:layout_marginTop="20dp"
                android:background="@drawable/et_custom"
                android:fontFamily="@font/poppins_regular"
                android:hint="@string/title_email"
                android:alpha="0.9"
                android:drawableTint="@color/gray"
                android:drawablePadding="10dp"
                android:drawableStart="@drawable/icon_email_24px"
                android:inputType="textEmailAddress"
                android:padding="15dp"
                android:textSize="15dp" />

            <EditText
                android:id="@+id/input_phone_number"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="22dp"
                android:layout_marginTop="20dp"
                android:background="@drawable/et_custom"
                android:fontFamily="@font/poppins_regular"
                android:drawablePadding="10dp"
                android:drawableTint="@color/gray"
                android:drawableStart="@drawable/icon_phone_enabled_24px"
                android:hint="@string/title_phone_number"
                android:alpha="0.9"
                android:inputType="number"
                android:maxLength="11"
                android:padding="15dp"
                android:textSize="15dp"/>

            <EditText
                android:id="@+id/input_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="22dp"
                android:layout_marginTop="20dp"
                android:background="@drawable/et_custom"
                android:fontFamily="@font/poppins_regular"
                android:drawablePadding="10dp"
                android:drawableTint="@color/gray"
                android:drawableStart="@drawable/icon_lock_24px"
                android:hint="@string/title_password"
                android:inputType="textPassword"
                android:alpha="0.9"
                android:padding="15dp"
                android:textSize="15dp" />

            <View
                android:id="@+id/divider"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginHorizontal="22dp"
                android:layout_marginTop="44dp"
                android:background="@color/white" />

            <Button
                android:id="@+id/buttonRegister"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="22dp"
                android:layout_marginTop="60dp"
                android:background="@drawable/background_custom_button"
                android:fontFamily="@font/poppins_medium"
                android:text="@string/title_register"
                android:textAllCaps="false"
                android:clickable="true"
                android:foreground="?attr/selectableItemBackground"
                android:textColor="@color/atomic_steel_blue"
                android:textSize="16dp" />
        </LinearLayout>
    </androidx.core.widget.NestedScrollView>

    <include
        android:id="@+id/loading_widget"
        layout="@layout/shared_loading_widget"
        tools:visibility="gone"/>
</androidx.constraintlayout.widget.ConstraintLayout>