<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".login.presentation.Login">

    <data>

        <import type="android.view.View"/>

        <import type="android.view.Gravity" />

        <variable
            name="viewModel"
            type="com.example.iteneraryapplication.login.presentation.LoginViewModel" />

        <variable
            name="isBeginJourney"
            android:value="false"
            type="boolean" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:adjustViewBounds="true"
            android:scaleType="centerCrop"
            android:src="@drawable/background_main"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/login_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="73dp"
            android:layout_marginEnd="32dp"
            android:fontFamily="@font/indigo_daisy"
            android:text="@string/login_title"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:letterSpacing="0.02"
            android:textSize="70dp"
            android:visibility="@{isBeginJourney ? View.GONE : View.VISIBLE}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/login_subtitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login_subtitle"
            android:textAlignment="center"
            android:fontFamily="@font/helvetica_rounded_bold"
            android:textColor="@color/white"
            android:textSize="22dp"
            android:visibility="@{isBeginJourney ? View.GONE : View.VISIBLE}"
            app:layout_constraintEnd_toEndOf="@+id/login_title"
            app:layout_constraintTop_toBottomOf="@+id/login_title" />

        <LinearLayout
            android:id="@+id/layout_main"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:orientation="vertical"
            android:gravity="@{isBeginJourney ? Gravity.CENTER : Gravity.BOTTOM }"
            android:animateLayoutChanges="true"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:gravity="bottom">

            <LinearLayout
                android:id="@+id/layout_login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:visibility="@{isBeginJourney ? View.VISIBLE : View.GONE}"
                android:orientation="vertical"
                tools:visibility="gone">

                <TextView
                    android:id="@+id/tvLogin"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="32dp"
                    android:layout_marginTop="73dp"
                    android:fontFamily="@font/indigo_daisy"
                    android:text="@string/title_login"
                    android:letterSpacing="0.02"
                    android:textAlignment="center"
                    android:textColor="@color/white"
                    android:textSize="80dp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <EditText
                    android:id="@+id/et_email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="22dp"
                    android:layout_marginTop="63dp"
                    android:background="@drawable/et_custom"
                    android:fontFamily="@font/helvetica_regular"
                    android:drawableTint="@color/gray"
                    android:drawablePadding="10dp"
                    android:drawableStart="@drawable/icon_email_24px"
                    android:hint="@string/title_email"
                    android:inputType="textEmailAddress"
                    android:padding="15dp"
                    android:textSize="15dp"
                    android:alpha="0.9"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tvLogin" />

                <EditText
                    android:id="@+id/et_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:layout_marginHorizontal="22dp"
                    android:background="@drawable/et_custom"
                    android:fontFamily="@font/helvetica_regular"
                    android:hint="@string/title_password"
                    android:drawablePadding="10dp"
                    android:drawableTint="@color/gray"
                    android:drawableStart="@drawable/icon_lock_24px"
                    android:inputType="textPassword"
                    android:padding="15dp"
                    android:textSize="15dp"
                    android:alpha="0.9"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/et_email" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginVertical="44dp"
                    android:layout_marginHorizontal="22dp"
                    android:background="@color/white"/>

                <Button
                    android:id="@+id/button_login"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:layout_marginHorizontal="22dp"
                    android:background="@drawable/background_custom_button"
                    android:fontFamily="@font/helvetica_rounded_bold"
                    android:text="@string/title_login"
                    android:textAllCaps="false"
                    android:textSize="16dp"
                    android:clickable="true"
                    android:foreground="?attr/selectableItemBackground"
                    android:textColor="@color/atomic_steel_blue"
                    app:layout_constraintEnd_toEndOf="@id/et_password"
                    app:layout_constraintStart_toStartOf="@id/et_password"
                    app:layout_constraintTop_toBottomOf="@+id/et_password" />

                <TextView
                    android:id="@+id/tv_register_account"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/helvetica_rounded_bold"
                    android:text="@string/title_register"
                    android:layout_marginTop="20dp"
                    android:textAlignment="center"
                    android:textColor="@color/white"
                    android:textSize="16dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/button_login" />
            </LinearLayout>

            <Button
                android:id="@+id/begin_journey"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:layout_marginBottom="60dp"
                android:background="@drawable/background_custom_button"
                android:layout_marginHorizontal="22dp"
                android:textAllCaps="false"
                android:textSize="16dp"
                android:clickable="true"
                android:foreground="?attr/selectableItemBackground"
                android:text="@string/login_bottom_button_title"
                android:visibility="@{isBeginJourney ? View.GONE : View.VISIBLE}"
                android:fontFamily="@font/helvetica_rounded_bold"
                android:textColor="@color/atomic_steel_blue"
                app:layout_constraintEnd_toEndOf="@id/et_password"
                app:layout_constraintStart_toStartOf="@id/et_password"
                app:layout_constraintTop_toBottomOf="@+id/et_password" />
        </LinearLayout>

        <include
            android:id="@+id/loading_widget"
            layout="@layout/shared_loading_widget"
            tools:visibility="gone"/>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>